src/opt/tests/snapshots/writeonly__bail_other_index.snap
---
created: "2019-04-09T17:16:06.419758600Z"
creator: insta@0.7.1
source: src/opt/tests/writeonly.rs
expression: "\n    const x = {};\n    log();\n    z[1] = x;\n"
---
_ini = {  }
_fun = <global log>
<dead> = _fun()
_obj = <global z>
_prp = 1
_obj[_prp] <- _ini
