src/opt/tests/snapshots/writeonly__basic.snap
---
created: "2019-04-09T17:07:49.719233Z"
creator: insta@0.7.1
source: src/opt/tests/writeonly.rs
expression: "\n    ({}).x = 1;\n"
---
<dead> = "x"
_val = 1
<dead> = _val
