src/opt/tests/snapshots/writeonly__basic_bail.snap
---
created: "2019-04-27T22:01:40.289873200Z"
creator: insta@0.7.4
source: src/opt/tests/writeonly.rs
expression: "\n    const x = {};\n    log();\n    x.z = 3;\n    g = function f() {\n        x.y;\n    }\n"
---
x = {  }
_fun = <global log>
<dead> = _fun()
_prp = "z"
_val = 3
x[_prp] <- _val
_val$1 = <function>:
    _prp$1 = "y"
    <dead> = x[_prp$1]
<global g> <- _val$1
